frontend-with-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: frontend
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - image: brendanburns/journal-server:latest
        imagePullPolicy: IfNotPresent
        name: frontend
        volumeMounts:
        - name: passwd-volume
          readOnly: true
          mountPath: "/etc/redis-passwd"
        resources:
          requests:
            cpu: "0.2"
            memory: "200M"
          limits:
            cpu: "0.2"
            memory: "200M"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
